compiler/src/test/resources/amyc/typer/passing/IfWithError.amy
object If
  val a: Int = if (true) { error("") } else { error("") };
  val x: Int = if (true) { 1 } else { 2 };
  x
end If
