compiler/src/test/resources/amyc/typer/failing/LetError1.amy
object LetError1
  fn test(): Int = {
    val x: Int = 1;
    false
  }
end LetError1
